test fix for bottom container that was sticking out

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     padding: 0;
     box-sizing: border-box;
     max-width: 1200px;
-    max-height: 800px;
+    max-height: 500px;
 }
 /*-------------------------------------------------------------------------------*/
 /*Images:*/
